correcting dark mode button

--- a/styles/base.css
+++ b/styles/base.css
@@ -32,7 +32,7 @@ header span{
 #darkBtn{
     position: absolute;
     top: 1rem;
-    right: 1rem;
+    right: .5rem;
     width: 24px;
     background-color: rgb(253, 236, 184);
     cursor: pointer;
